# wdrd

./: .gitignore  README.md  pyproject.toml  run.py  test.ipynb
wdrd/: __init__.py  config.py  document.py  load.py  models.py  motion.py  riksdagen.py  sparql.py  transform.py  wd_item.py
